package br.org.cDanSantana.meuFone.telefone;

// Interface para o aparelho telefônico
public interface ITelefone {
    void ligar(String numero);
    void atender();
    void iniciarCorreioVoz();
}